# walletconnect-test

./: Cargo.toml  README.md
examples/: qr.rs
src/: main.rs
